[tool.poetry]
name = "davt_services_python"
version = "202209.0.2"
description = "GIFT/DAVT Python Services Library"
authors = ["John Bowyer <zfi4@cdc.gov>"]
license = "Apache"
homepage = "https://github.com/cdcent/davt"
repository = "https://github.com/cdcent/davt"
include = [
    "LICENSE.MD",
    "docs/readme.md",
]
exclude = ["*"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "==3.8"

[tool.poetry.dev-dependencies]"
setuptools = "^62.6.0""
sphinx-sql = "^1.3.2"
sphinx-markdown-builder = "^0.5.5"
Sphinx = "^5.0.2"
myst-parser = "^0.18.0"
sphinx-rtd-theme = "^1.0.0"
recommonmark=">=0.7.1"
sphinx-markdown-tables=">=0.0.17"
linkify-it-py=">=2.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",  # You should have a "tests" directory
]

style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[tool.semantic_release]
version_variable = [
    "setup.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.mypy]
python_version = 3.8
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
exclude = 'tests'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
